CRUD - Answers/ Features- answers n views synced & best_answer

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10939,7 +10939,7 @@ a.text-dark:focus {
 
 .statistics .answers.answered {
   border: solid 1px #38c172;
-  color: #fff;
+  color: #38c172;
 }
 
 .statistics .answers.has-best-answer {
